Stop images overflowing containers by default

--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ li {
   padding: 0;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   font-family: 'Helvetica', Helvetica, Arial, sans-serif;
 }
